Fix List overflow

--- a/src/app/pages/operating-page/operating-page.component.scss
+++ b/src/app/pages/operating-page/operating-page.component.scss
@@ -59,8 +59,7 @@ input.barcode-hidden {
 }
 
 .fuellungen {
-    display: flex;
-    flex-direction: column;
+    display: block;
     flex: 1;
     overflow: auto;
 }
